style: fixing generic form overflow

--- a/src/components/generic-form-permit/style.scss
+++ b/src/components/generic-form-permit/style.scss
@@ -8,6 +8,11 @@ $bgColor: #f6f8fa;
   border-radius: 10px;
   background-color: white;
 
+  @media (max-width: 599px) {
+    max-height: calc(100vh - 110px);
+    overflow: auto;
+  }
+
   .d-flex {
     display: flex;
   }
